# coding-tool

./: .gitignore  pyproject.toml
notes/: tool-use-vs-structured-output.md
results/: single_run.csv  sweep.csv  sweep.md
results/haiku-failing/: single_run.csv
results/haiku-sp-medium-single/: sweep.csv  sweep.md
results/haiku-sp-medium-structured/: sweep.csv  sweep.md
results/opus-c09/single/: single_run.csv
results/opus-c09/structured/: single_run.csv
results/opus-sp-medium-single/: sweep.csv  sweep.md
results/opus-sp-medium-structured/: sweep.csv  sweep.md
results/smoke-small/: sweep.csv  sweep.md
results/smoke-small-v2/: sweep.csv  sweep.md
results/smoke-sonnet-medium/: sweep.csv  sweep.md
results/smoke-sonnet-medium-hybrid/: sweep.csv  sweep.md
results/smoke-sonnet-medium-v2/: sweep.csv  sweep.md
results/smoke-sonnet-small/: sweep.csv  sweep.md
results/smoke-sonnet-small-v2/: sweep.csv  sweep.md
results/sonnet-sp-medium-structured/: sweep.csv  sweep.md
results/structured-test/: summary.json
results/structured-test/single/: single_run.csv
results/structured-test/structured/: single_run.csv
results/v2/: sweep.csv  sweep.md
scripts/: fetch_polyglot.py  inspect_trace.py
src/coding_tool/: __init__.py  cli.py  types.py
src/coding_tool/bench/: __init__.py  oracle.py  report.py  runner.py  task.py
src/coding_tool/formats/: __init__.py  base.py  search_plus.py  search_replace.py  semantic.py  unified_diff.py
src/coding_tool/models/: __init__.py  base.py  (+2 more)
tasks/v2/: AUTHORING.md
tests/: test_formats.py  test_v2_oracles.py
(+184 files in other folders)
