[project]
name = "coding-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AntoineToussaint", email = "antoine@tensorzero.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agent-eval-core",
    "anthropic>=0.102.0",
    "gitpython>=3.1.50",
    "httpx>=0.28.1",
    "jsonlines>=4.0.0",
    "libcst>=1.8.6",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "typer>=0.25.1",
    "types-pyyaml>=6.0.12.20260518",
    "unidiff>=0.7.5",
]

[project.scripts]
coding-tool = "coding_tool:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
    "types-tqdm>=4.67.3.20260518",
]

[tool.uv.sources]
agent-eval-core = { git = "https://github.com/AntoineToussaint/agent-eval-core" }
